# MPointer

./: CMakeLists.txt  README.md  library.h
Library_Mpointer/: CMakeLists.txt  LinkedList.cpp  LinkedList.h  MPointer.h  MPointerGC.cpp  MPointerGC.h  library.cpp  library.h
Linkedlists/: CMakeLists.txt  DoubleLinkedList.cpp  DoubleLinkedList.h  Sorters.cpp  Sorters.h  main.cpp
Linkedlists/src/: Sorters.cpp  main.cpp
Linkedlists/tst/: Sorters.cpp  Sorters.h  test_main.cpp
